src/test/deca/extension/context/valid/test_decl_tableau_class_2d.deca
// Description:
// Test la declaration de tableau 2d
// pour des  classes  
// Resultats:
//  TEST valide contextuelement
// Historique:
//    cree le 01/01/2023

class Point2D {
    int x ; // Abscisse
    int y ; // Ordonnee
    // Deplace ce point
    // de a en diagonale.
    void diag(int a) {
        x = x + a;
        y = y + a;
    }
}

class Point3D extends Point2D {
    int z; // Hauteur
    void diag(int a) {
        x = x + a;
        y = y + a;
        z = z + a;
    }
}

{
    Point2D point2d = new Point2D();
    Object[][] tableauObjet = new Object[1][2];
    Point2D[][] listeDePoint2d;
    listeDePoint2d = new Point2D[9][4];
}
